Fixed spacing of buttons and added border effect with hover.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -91,8 +91,14 @@ div button{
     display: inline-block;
     padding: 10px 16px;
     background-color: #f2f2f2;
-    border-style: none;
+    border-color: #f2f2f2;
+    border-style: solid;
+    border-width: 1px;
+    margin-left: 10px;
+    border-radius: 3px;
 }
-.gsearch{
-   padding-right: 40px;
+
+div button:hover{
+    border-color:rgba(95, 99, 104, 0.295);
+    cursor: pointer;
 }
